Add basic examples.

--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "MIT",
   "author": "Stephen Hellicar",
-  "description": "",
+  "description": "Basic clean plugin to keep out dir small.",
   "keywords": ["esbuild", "build", "clean", "plugin"],
   "repository": {
     "type": "git",
@@ -21,8 +21,8 @@
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/esm/cjs/index.d.ts",
-        "default": "./dist/esm/cjs/index.js"
+        "types": "./dist/esm/cjs/index.d.cts",
+        "default": "./dist/esm/cjs/index.cjs"
       },
       "import": {
         "types": "./dist/esm/esm/index.d.ts",
@@ -31,8 +31,8 @@
     },
     "./astro": {
       "require": {
-        "types": "./dist/esm/cjs/astro.d.ts",
-        "default": "./dist/esm/cjs/astro.js"
+        "types": "./dist/esm/cjs/astro.d.cts",
+        "default": "./dist/esm/cjs/astro.cjs"
       },
       "import": {
         "types": "./dist/esm/astro.d.ts",
@@ -41,8 +41,8 @@
     },
     "./rspack": {
       "require": {
-        "types": "./dist/esm/cjs/rspack.d.ts",
-        "default": "./dist/esm/cjs/rspack.js"
+        "types": "./dist/esm/cjs/rspack.d.cts",
+        "default": "./dist/esm/cjs/rspack.cjs"
       },
       "import": {
         "types": "./dist/esm/rspack.d.ts",
@@ -51,8 +51,8 @@
     },
     "./vite": {
       "require": {
-        "types": "./dist/esm/cjs/vite.d.ts",
-        "default": "./dist/esm/cjs/vite.js"
+        "types": "./dist/esm/cjs/vite.d.cts",
+        "default": "./dist/esm/cjs/vite.cjs"
       },
       "import": {
         "types": "./dist/esm/vite.d.ts",
@@ -61,8 +61,8 @@
     },
     "./webpack": {
       "require": {
-        "types": "./dist/esm/cjs/webpack.d.ts",
-        "default": "./dist/esm/cjs/webpack.js"
+        "types": "./dist/esm/cjs/webpack.d.cts",
+        "default": "./dist/esm/cjs/webpack.cjs"
       },
       "import": {
         "types": "./dist/esm/webpack.d.ts",
@@ -71,8 +71,8 @@
     },
     "./rollup": {
       "require": {
-        "types": "./dist/esm/cjs/rollup.d.ts",
-        "default": "./dist/esm/cjs/rollup.js"
+        "types": "./dist/esm/cjs/rollup.d.cts",
+        "default": "./dist/esm/cjs/rollup.cjs"
       },
       "import": {
         "types": "./dist/esm/rollup.d.ts",
@@ -81,8 +81,8 @@
     },
     "./esbuild": {
       "require": {
-        "types": "./dist/esm/cjs/esbuild.d.ts",
-        "default": "./dist/esm/cjs/esbuild.js"
+        "types": "./dist/esm/cjs/esbuild.d.cts",
+        "default": "./dist/esm/cjs/esbuild.cjs"
       },
       "import": {
         "types": "./dist/esm/esbuild.d.ts",
@@ -91,8 +91,8 @@
     },
     "./nuxt": {
       "require": {
-        "types": "./dist/esm/cjs/nuxt.d.ts",
-        "default": "./dist/esm/cjs/nuxt.js"
+        "types": "./dist/esm/cjs/nuxt.d.cts",
+        "default": "./dist/esm/cjs/nuxt.cjs"
       },
       "import": {
         "types": "./dist/esm/nuxt.d.ts",
@@ -101,8 +101,8 @@
     },
     "./farm": {
       "require": {
-        "types": "./dist/esm/cjs/farm.d.ts",
-        "default": "./dist/esm/cjs/farm.js"
+        "types": "./dist/esm/cjs/farm.d.cts",
+        "default": "./dist/esm/cjs/farm.cjs"
       },
       "import": {
         "types": "./dist/esm/farm.d.ts",
@@ -111,8 +111,8 @@
     },
     "./types": {
       "require": {
-        "types": "./dist/esm/cjs/core/types.d.ts",
-        "default": "./dist/esm/cjs/core/types.js"
+        "types": "./dist/esm/cjs/core/types.d.cts",
+        "default": "./dist/esm/cjs/core/types.cjs"
       },
       "import": {
         "types": "./dist/esm/core/types.d.ts",
@@ -121,8 +121,8 @@
     },
     "./typedefs": {
       "require": {
-        "types": "./dist/esm/cjs/core/typedefs.d.ts",
-        "default": "./dist/esm/cjs/core/typedefs.js"
+        "types": "./dist/esm/cjs/core/typedefs.d.cts",
+        "default": "./dist/esm/cjs/core/typedefs.cjs"
       },
       "import": {
         "types": "./dist/esm/core/typedefs.d.ts",
@@ -131,8 +131,8 @@
     },
     "./*": {
       "require": {
-        "types": "./dist/esm/cjs/*.d.ts",
-        "default": "./dist/esm/cjs/*.js"
+        "types": "./dist/cjs/*.d.cts",
+        "default": "./dist/cjs/*.cjs"
       },
       "import": {
         "types": "./dist/esm/*.d.ts",
@@ -140,7 +140,7 @@
       }
     }
   },
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "typesVersions": {
