--- a/examples/esm/tsconfig.json
+++ b/examples/esm/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tsup.config.ts"],
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "moduleResolution": "bundler",
