--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shellicar/build-clean",
   "private": false,
-  "version": "1.0.0-preview.3",
+  "version": "1.0.0-preview.4",
   "type": "module",
   "license": "MIT",
   "author": "Stephen Hellicar",
@@ -20,123 +20,103 @@
   },
   "exports": {
     ".": {
-      "require": {
-        "types": "./dist/cjs/index.d.cts",
-        "default": "./dist/cjs/index.cjs"
-      },
       "import": {
-        "types": "./dist/esm/index.d.ts",
-        "default": "./dist/esm/index.js"
+        "default": "./dist/esm/index.js",
+        "types": "./dist/esm/index.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/index.cjs",
+        "types": "./dist/cjs/index.d.cts"
       }
     },
     "./astro": {
-      "require": {
-        "types": "./dist/cjs/astro.d.cts",
-        "default": "./dist/cjs/astro.cjs"
-      },
       "import": {
-        "types": "./dist/esm/astro.d.ts",
-        "default": "./dist/esm/astro.js"
-      }
-    },
-    "./rspack": {
-      "require": {
-        "types": "./dist/cjs/rspack.d.cts",
-        "default": "./dist/cjs/rspack.cjs"
+        "default": "./dist/esm/astro.js",
+        "types": "./dist/esm/astro.d.ts"
       },
-      "import": {
-        "types": "./dist/esm/rspack.d.ts",
-        "default": "./dist/esm/rspack.js"
-      }
-    },
-    "./vite": {
       "require": {
-        "types": "./dist/cjs/vite.d.cts",
-        "default": "./dist/cjs/vite.cjs"
-      },
-      "import": {
-        "types": "./dist/esm/vite.d.ts",
-        "default": "./dist/esm/vite.js"
-      }
-    },
-    "./webpack": {
-      "require": {
-        "types": "./dist/cjs/webpack.d.cts",
-        "default": "./dist/cjs/webpack.cjs"
-      },
-      "import": {
-        "types": "./dist/esm/webpack.d.ts",
-        "default": "./dist/esm/webpack.js"
-      }
-    },
-    "./rollup": {
-      "require": {
-        "types": "./dist/cjs/rollup.d.cts",
-        "default": "./dist/cjs/rollup.cjs"
-      },
-      "import": {
-        "types": "./dist/esm/rollup.d.ts",
-        "default": "./dist/esm/rollup.js"
+        "default": "./dist/cjs/astro.cjs",
+        "types": "./dist/cjs/astro.d.cts"
       }
     },
     "./esbuild": {
-      "require": {
-        "types": "./dist/cjs/esbuild.d.cts",
-        "default": "./dist/cjs/esbuild.cjs"
-      },
       "import": {
-        "types": "./dist/esm/esbuild.d.ts",
-        "default": "./dist/esm/esbuild.js"
-      }
-    },
-    "./nuxt": {
-      "require": {
-        "types": "./dist/cjs/nuxt.d.cts",
-        "default": "./dist/cjs/nuxt.cjs"
+        "default": "./dist/esm/esbuild.js",
+        "types": "./dist/esm/esbuild.d.ts"
       },
-      "import": {
-        "types": "./dist/esm/nuxt.d.ts",
-        "default": "./dist/esm/nuxt.js"
+      "require": {
+        "default": "./dist/cjs/esbuild.cjs",
+        "types": "./dist/cjs/esbuild.d.cts"
       }
     },
     "./farm": {
-      "require": {
-        "types": "./dist/cjs/farm.d.cts",
-        "default": "./dist/cjs/farm.cjs"
-      },
       "import": {
-        "types": "./dist/esm/farm.d.ts",
-        "default": "./dist/esm/farm.js"
+        "default": "./dist/esm/farm.js",
+        "types": "./dist/esm/farm.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/farm.cjs",
+        "types": "./dist/cjs/farm.d.cts"
+      }
+    },
+    "./nuxt": {
+      "import": {
+        "default": "./dist/esm/nuxt.js",
+        "types": "./dist/esm/nuxt.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/nuxt.cjs",
+        "types": "./dist/cjs/nuxt.d.cts"
+      }
+    },
+    "./rollup": {
+      "import": {
+        "default": "./dist/esm/rollup.js",
+        "types": "./dist/esm/rollup.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/rollup.cjs",
+        "types": "./dist/cjs/rollup.d.cts"
+      }
+    },
+    "./rspack": {
+      "import": {
+        "default": "./dist/esm/rspack.js",
+        "types": "./dist/esm/rspack.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/rspack.cjs",
+        "types": "./dist/cjs/rspack.d.cts"
       }
     },
     "./types": {
-      "require": {
-        "types": "./dist/cjs/core/types.d.cts",
-        "default": "./dist/cjs/core/types.cjs"
-      },
       "import": {
-        "types": "./dist/esm/core/types.d.ts",
-        "default": "./dist/esm/core/types.js"
+        "default": "./dist/esm/types.js",
+        "types": "./dist/esm/types.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/types.cjs",
+        "types": "./dist/cjs/types.d.cts"
       }
     },
-    "./typedefs": {
-      "require": {
-        "types": "./dist/cjs/core/typedefs.d.cts",
-        "default": "./dist/cjs/core/typedefs.cjs"
-      },
+    "./vite": {
       "import": {
-        "types": "./dist/esm/core/typedefs.d.ts",
-        "default": "./dist/esm/core/typedefs.js"
+        "default": "./dist/esm/vite.js",
+        "types": "./dist/esm/vite.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/vite.cjs",
+        "types": "./dist/cjs/vite.d.cts"
       }
     },
-    "./*": {
-      "require": {
-        "types": "./dist/cjs/*.d.cts",
-        "default": "./dist/cjs/*.cjs"
-      },
+    "./webpack": {
       "import": {
-        "types": "./dist/esm/*.d.ts",
-        "default": "./dist/esm/*.js"
+        "default": "./dist/esm/webpack.js",
+        "types": "./dist/esm/webpack.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/webpack.cjs",
+        "types": "./dist/cjs/webpack.d.cts"
       }
     }
   },
@@ -145,17 +125,16 @@
   "types": "dist/esm/index.d.ts",
   "typesVersions": {
     "*": {
+      "index": ["./dist/esm/index.d.ts"],
       "astro": ["./dist/esm/astro.d.ts"],
-      "rspack": ["./dist/esm/rspack.d.ts"],
-      "vite": ["./dist/esm/vite.d.ts"],
-      "webpack": ["./dist/esm/webpack.d.ts"],
-      "rollup": ["./dist/esm/rollup.d.ts"],
       "esbuild": ["./dist/esm/esbuild.d.ts"],
-      "nuxt": ["./dist/esm/nuxt.d.ts"],
       "farm": ["./dist/esm/farm.d.ts"],
-      "types": ["./dist/esm/core/types.d.ts"],
-      "typedefs": ["./dist/esm/core/typedefs.d.ts"],
-      "*": ["./dist/esm/*"]
+      "nuxt": ["./dist/esm/nuxt.d.ts"],
+      "rollup": ["./dist/esm/rollup.d.ts"],
+      "rspack": ["./dist/esm/rspack.d.ts"],
+      "types": ["./dist/esm/types.d.ts"],
+      "vite": ["./dist/esm/vite.d.ts"],
+      "webpack": ["./dist/esm/webpack.d.ts"]
     }
   },
   "files": ["dist", "*.md"],
