Fix export order.

--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shellicar/build-clean",
   "private": false,
-  "version": "1.0.0-preview.4",
+  "version": "1.0.0-preview.5",
   "type": "module",
   "license": "MIT",
   "author": "Stephen Hellicar",
@@ -21,102 +21,102 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/esm/index.js",
-        "types": "./dist/esm/index.d.ts"
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
       },
       "require": {
-        "default": "./dist/cjs/index.cjs",
-        "types": "./dist/cjs/index.d.cts"
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/index.cjs"
       }
     },
     "./astro": {
       "import": {
-        "default": "./dist/esm/astro.js",
-        "types": "./dist/esm/astro.d.ts"
+        "types": "./dist/esm/astro.d.ts",
+        "default": "./dist/esm/astro.js"
       },
       "require": {
-        "default": "./dist/cjs/astro.cjs",
-        "types": "./dist/cjs/astro.d.cts"
+        "types": "./dist/cjs/astro.d.cts",
+        "default": "./dist/cjs/astro.cjs"
       }
     },
     "./esbuild": {
       "import": {
-        "default": "./dist/esm/esbuild.js",
-        "types": "./dist/esm/esbuild.d.ts"
+        "types": "./dist/esm/esbuild.d.ts",
+        "default": "./dist/esm/esbuild.js"
       },
       "require": {
-        "default": "./dist/cjs/esbuild.cjs",
-        "types": "./dist/cjs/esbuild.d.cts"
+        "types": "./dist/cjs/esbuild.d.cts",
+        "default": "./dist/cjs/esbuild.cjs"
       }
     },
     "./farm": {
       "import": {
-        "default": "./dist/esm/farm.js",
-        "types": "./dist/esm/farm.d.ts"
+        "types": "./dist/esm/farm.d.ts",
+        "default": "./dist/esm/farm.js"
       },
       "require": {
-        "default": "./dist/cjs/farm.cjs",
-        "types": "./dist/cjs/farm.d.cts"
+        "types": "./dist/cjs/farm.d.cts",
+        "default": "./dist/cjs/farm.cjs"
       }
     },
     "./nuxt": {
       "import": {
-        "default": "./dist/esm/nuxt.js",
-        "types": "./dist/esm/nuxt.d.ts"
+        "types": "./dist/esm/nuxt.d.ts",
+        "default": "./dist/esm/nuxt.js"
       },
       "require": {
-        "default": "./dist/cjs/nuxt.cjs",
-        "types": "./dist/cjs/nuxt.d.cts"
+        "types": "./dist/cjs/nuxt.d.cts",
+        "default": "./dist/cjs/nuxt.cjs"
       }
     },
     "./rollup": {
       "import": {
-        "default": "./dist/esm/rollup.js",
-        "types": "./dist/esm/rollup.d.ts"
+        "types": "./dist/esm/rollup.d.ts",
+        "default": "./dist/esm/rollup.js"
       },
       "require": {
-        "default": "./dist/cjs/rollup.cjs",
-        "types": "./dist/cjs/rollup.d.cts"
+        "types": "./dist/cjs/rollup.d.cts",
+        "default": "./dist/cjs/rollup.cjs"
       }
     },
     "./rspack": {
       "import": {
-        "default": "./dist/esm/rspack.js",
-        "types": "./dist/esm/rspack.d.ts"
+        "types": "./dist/esm/rspack.d.ts",
+        "default": "./dist/esm/rspack.js"
       },
       "require": {
-        "default": "./dist/cjs/rspack.cjs",
-        "types": "./dist/cjs/rspack.d.cts"
+        "types": "./dist/cjs/rspack.d.cts",
+        "default": "./dist/cjs/rspack.cjs"
       }
     },
     "./types": {
       "import": {
-        "default": "./dist/esm/types.js",
-        "types": "./dist/esm/types.d.ts"
+        "types": "./dist/esm/types.d.ts",
+        "default": "./dist/esm/types.js"
       },
       "require": {
-        "default": "./dist/cjs/types.cjs",
-        "types": "./dist/cjs/types.d.cts"
+        "types": "./dist/cjs/types.d.cts",
+        "default": "./dist/cjs/types.cjs"
       }
     },
     "./vite": {
       "import": {
-        "default": "./dist/esm/vite.js",
-        "types": "./dist/esm/vite.d.ts"
+        "types": "./dist/esm/vite.d.ts",
+        "default": "./dist/esm/vite.js"
       },
       "require": {
-        "default": "./dist/cjs/vite.cjs",
-        "types": "./dist/cjs/vite.d.cts"
+        "types": "./dist/cjs/vite.d.cts",
+        "default": "./dist/cjs/vite.cjs"
       }
     },
     "./webpack": {
       "import": {
-        "default": "./dist/esm/webpack.js",
-        "types": "./dist/esm/webpack.d.ts"
+        "types": "./dist/esm/webpack.d.ts",
+        "default": "./dist/esm/webpack.js"
       },
       "require": {
-        "default": "./dist/cjs/webpack.cjs",
-        "types": "./dist/cjs/webpack.d.cts"
+        "types": "./dist/cjs/webpack.d.cts",
+        "default": "./dist/cjs/webpack.cjs"
       }
     }
   },
