--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shellicar/build-clean",
   "private": false,
-  "version": "1.0.0-preview.5",
+  "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "author": "Stephen Hellicar",
