--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "MIT",
   "author": "Stephen Hellicar",
-  "description": "Basic clean plugin to keep out dir small.",
+  "description": "Build plugin that automatically cleans unused files from output directories.",
   "keywords": ["esbuild", "build", "clean", "plugin"],
   "repository": {
     "type": "git",
