--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,9 +4,10 @@ packages:
 
 overrides:
   '@isaacs/brace-expansion@<=5.0.0': '>=5.0.1'
-  glob@>=10.2.0 <10.5.0: '>=10.5.0'
-  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
-  koa@>=2.16.2 <2.16.3: '>=2.16.3'
-  vite@>=6.0.0 <=6.3.5: '>=6.3.6'
-  vite@>=6.0.0 <=6.4.0: '>=6.4.1'
-  webpack@>=5.49.0 <=5.104.0: '>=5.104.1'
+  'glob@>=10.2.0 <10.5.0': '>=10.5.0'
+  'js-yaml@>=4.0.0 <4.1.1': '>=4.1.1'
+  'koa@<2.16.4': '>=2.16.4'
+  'koa@>=3.0.0 <3.1.2': '>=3.1.2'
+  'vite@>=6.0.0 <=6.3.5': '>=6.3.6'
+  'vite@>=6.0.0 <=6.4.0': '>=6.4.1'
+  'webpack@>=5.49.0 <=5.104.0': '>=5.104.1'
