--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
-    - run: pnpm audit || true
+    - run: pnpm audit
     - run: pnpm i --frozen-lockfile
     - run: pnpm run --if-present build --only
     - run: pnpm run --if-present type-check --only
